...
                    }
                    Button {
                        withAnimation {
                            $contact.phones.append(PhoneNumber())
                        }
                    } label: {
                        Label("Add", systemImage: "plus.app")
                    }
                    .tint(.red)
                }
            } else {
                ForEach($contact.phones) { phone in
                    HStack {
...
