...
Get the schema version for a Realm at a given path.
:param: realmPath     Path to a Realm file.
:param: encryptionKey Optional 64-byte encryption key for encrypted Realms.
:param: error         If an error occurs, upon return contains an `NSError` object
                      that describes the problem. If you are not interested in
                      possible errors, omit the argument, or pass in `nil`.
:returns: The version of the Realm at `realmPath` or `nil` if the version cannot be read.
*/
public func schemaVersionAtPath(realmPath: String, encryptionKey: NSData? = nil, error: NSErrorPointer = nil) -> UInt64? {
    let version = RLMRealm.schemaVersionAtPath(realmPath, encryptionKey: encryptionKey, error: error)
    if version == RLMNotVersioned {
        return nil
    }
...
